Removed HMCTS example code

--- a/app/views/facilities_management/long_list/longList.html.erb
+++ b/app/views/facilities_management/long_list/longList.html.erb
@@ -28,152 +28,14 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-one-third">
 
-      <div class="hmcts-filter">
-
-        <div class="hmcts-filter__header">
-
-          <div class="hmcts-filter__header-title">
-            <h2 class="govuk-heading-m">Filter</h2>
-          </div>
-
-          <div class="hmcts-filter__header-action">
-
-          </div>
-
-        </div>
-
-        <div class="hmcts-filter__content">
-
-          <div class="hmcts-filter__selected">
-
-            <div class="hmcts-filter__selected-heading">
-
-              <div class="hmcts-filter__heading-title">
-                <h2 class="govuk-heading-m">Selected filters</h2>
-              </div>
-
-              <div class="hmcts-filter__heading-action">
-                <p><a class="govuk-link govuk-link--no-visited-state" href="">Clear filters</a></p>
-              </div>
-
-            </div>
-
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">Type</h3>
-
-            <ul class="hmcts-filter-tags">
-
-              <li>
-                <a class="hmcts-filter__tag" href="/path/to/remove/this"><span class="govuk-visually-hidden">Remove this filter</span>
-                  Divorce</a></li>
-
-              <li>
-                <a class="hmcts-filter__tag" href="/path/to/remove/this"><span class="govuk-visually-hidden">Remove this filter</span>
-                  Financial remedy</a></li>
-
-            </ul>
-
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-0">Status</h3>
-
-            <ul class="hmcts-filter-tags">
-
-              <li>
-                <a class="hmcts-filter__tag" href="/path/to/remove/this"><span class="govuk-visually-hidden">Remove this filter</span>
-                  Application drafted</a></li>
-
-            </ul>
-
-          </div>
-
-          <div class="hmcts-filter__options">
-
-            <button type="submit" class="govuk-button">
-              Apply filters
-            </button>
-
-            <div class="govuk-form-group">
-
-              <fieldset class="govuk-fieldset">
-
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                  Type
-                </legend>
-
-                <div class="govuk-checkboxes">
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="type-1" name="type" type="checkbox" value="1" checked>
-                    <label class="govuk-label govuk-checkboxes__label" for="type-1">
-                      Divorce (18)
-                    </label>
-                  </div>
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="type-2" name="type" type="checkbox" value="2" checked>
-                    <label class="govuk-label govuk-checkboxes__label" for="type-2">
-                      Financial Remedy (5)
-                    </label>
-                  </div>
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="type-3" name="type" type="checkbox" value="3">
-                    <label class="govuk-label govuk-checkboxes__label" for="type-3">
-                      Probate (2)
-                    </label>
-                  </div>
-
-                </div>
-              </fieldset>
-
-            </div>
-
-            <div class="govuk-form-group">
-
-              <fieldset class="govuk-fieldset">
-
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                  Status
-                </legend>
-
-                <div class="govuk-checkboxes">
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="status-1" name="status" type="checkbox" value="1" checked>
-                    <label class="govuk-label govuk-checkboxes__label" for="status-1">
-                      Application drafted
-                    </label>
-                  </div>
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="status-2" name="status" type="checkbox" value="2">
-                    <label class="govuk-label govuk-checkboxes__label" for="status-2">
-                      Awaiting payment
-                    </label>
-                  </div>
-
-                  <div class="govuk-checkboxes__item">
-                    <input class="govuk-checkboxes__input" id="status-3" name="status" type="checkbox" value="magistrate">
-                    <label class="govuk-label govuk-checkboxes__label" for="status-3">
-                      Petition paid
-                    </label>
-                  </div>
-
-                </div>
-              </fieldset>
-
-            </div>
-
-          </div>
-
-        </div>
-
-      </div>
+      Filters go here
 
     </div>
 
 
     <!-- Start of main list section -->
     <div class="govuk-grid-column-two-thirds">
-      twothirds
+      Suppliers list goes here
     </div>
   </div>
 </div>
