--- a/app/assets/stylesheets/apprenticeships.css
+++ b/app/assets/stylesheets/apprenticeships.css
@@ -11,5 +11,5 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_self
- *= require govuk-frontend
+ *= require apprenticeships/apprenticeships
  */
