--- a/app/views/apprenticeships/home/supplier_search.html.erb
+++ b/app/views/apprenticeships/home/supplier_search.html.erb
@@ -3,92 +3,196 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('Training provider results') %></h1>
+    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.training provider results') %></h1>
 
-<p class="govuk-body"> 
-        <%= t('.results_found_html', results: 55, search: params[:search]) %>
+    <p class="govuk-body">
+        <%= t('.there_are_8', results: 55, search: params[:search]) %>
     </p>
-    <p><%= t('.results_found_hint') %></p>
+    <p><%= t('.apply_filters') %></p>
 
+    <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
       <div class="govuk-grid-row">
 
         <div class="govuk-grid-column-one-third">
-          <div class="cmp-sidebar">
-            <h2 class="govuk-heading-s"><%= t('.keyword_search_label') %></h2>
-            <%= text_field_tag :search, params[:search], class: 'govuk-input' %>
-          </div>
 
           <h2 class="govuk-heading-m"><%= t('.apply_filters_label') %></h2>
 
           <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'ccs-no-print' %>
 
           <div class="cmp-sidebar">
-            <h2 class="govuk-heading-s"><%= t('.levels_label') %></h2>
+            <h2 class="govuk-heading-s"><%= t('.Overall Ofsted rating') %></h2>
 
             <div class="govuk-form-group">
               <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                 <div class="govuk-checkboxes">
-                  <% levels.each do |level| %>
+                  <% ofsted_rating.each do |rating| %>
                     <div class="govuk-checkboxes__item">
                       <%= check_box_tag(
-                              "levels[]",
-                              level,
+                              "rating[]",
+                              rating,
                               false,
                               class: "govuk-checkboxes__input",
-                              id: "level_#{level}"
+                              id: "rating_#{rating}"
                           ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="level_<%= level %>">
-                        <%= level %>
+                      <label class="govuk-label govuk-checkboxes__label" for="rating_<%= rating %>">
+                        <%= rating %>
                       </label>
                     </div>
                   <% end %>
                 </div>
               </fieldset>
             </div>
-            <details class="govuk-details">
-              <summary class="govuk-details__summary">
-                <span class="govuk-details__summary-text">
-                  <%= t('.explain_levels_link') %>
-                </span>
-              </summary>
-              <div class="govuk-details__text">
-                <%= t('.explain_levels_text') %>
-              </div>
-            </details>
-          </div>
-          <br>
-          <div class="cmp-sidebar">
-            <h2 class="govuk-heading-s"><%= t('.routes_label') %></h2>
 
-            <div class="govuk-form-group">
+           <h2 class="govuk-heading-s"><%= t('.Course Ofsted rating') %></h2>
+	   <div class="govuk-form-group">
               <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
                 <div class="govuk-checkboxes">
-                  <% routes.each do |route| %>
+                  <% course_rating.each do |course| %>
                     <div class="govuk-checkboxes__item">
                       <%= check_box_tag(
-                              "routes[]",
-                              route,
+                              "course[]",
+                              course,
                               false,
                               class: "govuk-checkboxes__input",
-                              id: "route_#{route}"
+                              id: "course_#{course}"
                           ) %>
-                      <label class="govuk-label govuk-checkboxes__label" for="route_<%= route %>">
-                        <%= route %>
+                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
+                        <%= course %>
+                      </label>
+                    </div>
+                  <% end %>
+                </div>
+              </fieldset> 
+            </div>
+
+         <h2 class="govuk-heading-s"><%= t('.Provider experience ') %></h2>
+           <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                <div class="govuk-checkboxes">
+                  <% provider_experience.each do |course| %>
+                    <div class="govuk-checkboxes__item">
+                      <%= check_box_tag(
+                              "course[]",
+                              course,
+                              false,
+                              class: "govuk-checkboxes__input",
+                              id: "course_#{course}"
+                          ) %>
+                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
+                        <%= course %>
                       </label>
                     </div>
                   <% end %>
                 </div>
               </fieldset>
             </div>
+
+         <h2 class="govuk-heading-s"><%= t('.Delivery method ') %></h2>
+           <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                <div class="govuk-checkboxes">
+                  <% delivery_method.each do |course| %>
+                    <div class="govuk-checkboxes__item">
+                      <%= check_box_tag(
+                              "course[]",
+                              course,
+                              false,
+                              class: "govuk-checkboxes__input",
+                              id: "course_#{course}"
+                          ) %>
+                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
+                        <%= course %>
+                      </label>
+                    </div>
+                  <% end %>
+                </div>
+              </fieldset>
+            </div>
+
+         <h2 class="govuk-heading-s"><%= t('.Time demand') %></h2>
+           <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                <div class="govuk-checkboxes">
+                  <% time_demand.each do |course| %>
+                    <div class="govuk-checkboxes__item">
+                      <%= check_box_tag(
+                              "course[]",
+                              course,
+                              false,
+                              class: "govuk-checkboxes__input",
+                              id: "course_#{course}"
+                          ) %>
+                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
+                        <%= course %>
+                      </label>
+                    </div>
+                  <% end %>
+                </div>
+              </fieldset>
+            </div>
+
+          <h2 class="govuk-heading-s"><%= t('.Classroom sharing ') %></h2>
+           <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                <div class="govuk-checkboxes">
+                  <% classroom_sharing.each do |course| %>
+                    <div class="govuk-checkboxes__item">
+                      <%= check_box_tag(
+                              "course[]",
+                              course,
+                              false,
+                              class: "govuk-checkboxes__input",
+                              id: "course_#{course}"
+                          ) %>
+                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
+                        <%= course %>
+                      </label>
+                    </div>
+                  <% end %>
+                </div>
+              </fieldset>
+            </div>
+
+         <h2 class="govuk-heading-s"><%= t('.Training availability ') %></h2>
+           <div class="govuk-form-group">
+              <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+                <div class="govuk-checkboxes">
+                  <% training_availability.each do |course| %>
+                    <div class="govuk-checkboxes__item">
+                      <%= check_box_tag(
+                              "course[]",
+                              course,
+                              false,
+                              class: "govuk-checkboxes__input",
+                              id: "course_#{course}"
+                          ) %>
+                      <label class="govuk-label govuk-checkboxes__label" for="course_<%=course %>">
+                        <%= course %>
+                      </label>
+                    </div>
+                  <% end %>
+                </div>
+              </fieldset>
+       </div>
           </div>
         </div>
-        <div class="govuk-grid-column-two-thirds">
+ 
+
+<table class="govuk-table">
+  <caption class="govuk-table__caption">Dates and amounts</caption>
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="col">Date</th>
+      <th class="govuk-table__header" scope="col">Amount</th>
+    </tr>
+  </thead>
+	  <div class="govuk-grid-column-two-thirds">
           <div>
             <h2 class="govuk-heading-m"><%= t('.sort_by_label') %></h2>
-            <%= select_tag :sort, options_for_select(sort_option), class: 'govuk-select' %>
+            <%= select_tag :sort, options_for_select(supplier_sort_option), class: 'govuk-select' %>
 
             <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-            <% results.each do |result| %>
+            <% supplier_results.each do |result| %>
               <%= render 'search_apprenticeship', result: result %>
             <% end %>
 
