--- a/app/views/apprenticeships/home/search.html.erb
+++ b/app/views/apprenticeships/home/search.html.erb
@@ -1,15 +1,23 @@
-<%= content_for :page_title, t('.page_title') %>
-<%= content_for :page_section, t('apprenticeships.page_section') %>
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
 
-<%= form_tag apprenticeships_search_results_path, method: :get do %>
+    <%= content_for :page_title, t('.page_title') %>
+    <%= content_for :page_section, t('apprenticeships.page_section') %>
+    
+    <%= form_tag apprenticeships_search_results_path, method: :get do %>
+    <div class="govuk-form-group">
+      <h1 class="govuk-label-wrapper">
+        <label class="govuk-label govuk-label--l" for="search">
+          <%= t('.search_label') %>
+        </label>
+      </h1>  
+      <span class="govuk-hint">
+        <%= t('.search_hint') %>
+      </span>
+      <%= text_field_tag :search, params[:search], class: 'govuk-input govuk-!-width-three-quarters' %>
+    </div>
+    <%= submit_tag t('.search_button'), class: 'govuk-button' %>
+    <% end %>
 
-  <label class="govuk-label govuk-label--m" for="search">
-    <%= t('.search_label') %>
-  </label>
-  <span class="govuk-hint">
-    <%= t('.search_hint') %>
-  </span>
-  <%= text_field_tag :search, params[:search], class: 'govuk-input govuk-input--width-30' %>
-  <br>
-  <%= submit_tag t('.search_button'), class: 'govuk-button govuk-!-margin-top-7' %>
-<% end %>
+  </div>
+</div>
