--- a/app/views/layouts/_beta-banner.html.erb
+++ b/app/views/layouts/_beta-banner.html.erb
@@ -1,6 +1,6 @@
-        <div class="govuk-phase-banner">
+        <div class="govuk-phase-banner ccs-no-print">
           <p class="govuk-phase-banner__content">
-            <strong class="govuk-tag govuk-phase-banner__content__tag "><%= t('layouts.application.beta') %></strong>
+            <strong class="govuk-tag govuk-phase-banner__content__tag"><%= t('layouts.application.beta') %></strong>
             <span class="govuk-phase-banner__text"><%= t('layouts.application.feedback_html', link: feedback_email_link) %></span>
           </p>
         </div>
