--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
     <%= render partial: '/shared/google_analytics' %>
   </head>
   <body class="govuk-template__body">
+    
     <script>
       document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');
     </script>
@@ -43,7 +44,7 @@
       <%= render partial: '/layouts/beta-banner' %>
 
       <% if @back_path.present? %>
-        <%= link_to t('.back'), @back_path, class: 'govuk-back-link', 'aria-label': t('.back_aria_label') %>
+        <%= render partial: '/layouts/back-link' %>
       <% end %>
 
       <main class="govuk-main-wrapper" id="main-content" role="main">
@@ -53,46 +54,7 @@
     </div>
 
     <footer class="govuk-footer" role="contentinfo">
-      <% if Marketplace.support_email_address.present? %>
-        <div class="footer-feedback govuk-!-padding-1">
-          <div class="govuk-width-container">
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-                <p class="govuk-!-margin-bottom-0 govuk-body-s">
-                  <span class="govuk-!-font-weight-bold"><%= t('.having_problems') %></span>
-                  <%= t('.support_html',
-                        link: support_email_link(t('.support_link_aria_label')),
-                        phone: support_telephone_number) %>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      <% end %>
-
-      <div class="govuk-footer__container govuk-width-container">
-        <div class="govuk-grid-row">
-          <div class="govuk-grid-column-one-third">
-            <span class="govuk-footer__logotype">
-              <%= render partial: '/layouts/logotype' %>
-            </span>
-          </div>
-
-          <div class="govuk-grid-column-two-thirds">
-            <div class="govuk-footer__meta">
-              <div class="govuk-footer__meta-item">
-                <a href="/cookies" aria-label= "<%= t('.cookie_link_aria_label') %>" class="ccs-footer__links ccs-no-print"><%= t(".cookie_link") %></a>
-              </div>
-              <div class="govuk-footer__meta-item">
-                <a href="https://www.gov.uk/government/publications/crown-commercial-service-privacy-notice" aria-label= "<%= t('.privacy_link_aria_label') %>" class="ccs-footer__links ccs-no-print"><%= t(".privacy_link") %></a>
-              </div>
-              <div class="govuk-footer__meta-item">
-                <%= t(".crown_copyright") %>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <%= render partial: '/layouts/footer' %>
     </footer>
 
     <%= render partial: '/layouts/cookie-banner' %>
