WIP: FM - started supplier list development

--- a/app/views/facilities_management/long_list/longList.html.erb
+++ b/app/views/facilities_management/long_list/longList.html.erb
@@ -19,9 +19,13 @@
     <h1 class="govuk-heading-xl">
       Supplier results
     </h1>
+    <div class="govuk-inset-text">
+      <strong>On this page</strong><br>
+      <span>You will need to do this, this and that</span>
+    </div>
   </fieldset>
   <p class="govuk-body">
-    Bla bla bla blurb goes here
+
   </p>
 
   <!-- Start of filter section -->
