WIP: FM services and long list page changes

--- a/app/views/facilities_management/long_list/longList.html.erb
+++ b/app/views/facilities_management/long_list/longList.html.erb
@@ -24,8 +24,8 @@
       <span>You will need to do this, this and that</span>
     </div>
   </fieldset>
-  <p class="govuk-body">
-
+  <p class="govuk-!-font-size-36">
+    <strong><%=@supplierCount %> suppliers found</strong> based on total contract value, when awarded.
   </p>
 
   <!-- Start of filter section -->
