--- a/app/views/layouts/_init-js.html.erb
+++ b/app/views/layouts/_init-js.html.erb
@@ -1,3 +1,6 @@
 <script>
-    window.GOVUKFrontend.initAll();
+    window.GOVUKFrontend.initAll(); 
+    jQuery(document).ready(function(){ 
+        //initCustomFnc(); 
+    });
 </script>
