--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -2,13 +2,58 @@
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <h1 class="govuk-heading-xl cmp-page-heading"><%= t('.header') %></h1>
+  <div class="govuk-grid-column-full" style="border: 1px solid red;">
 
-    <p class="govuk-body">
-        <%= t('.results_found_html', results: 55, search: params[:search]) %>
-    </p>
-    <p><%= t('.results_found_hint') %></p>
+    <h1 class="govuk-heading-xl"><%= t('.header') %></h1>
+
+    <p class="govuk-body"><%= t('.results_found_html', results: 55, search: params[:search]) %></p>
+
+    <p class="govuk-body"><%= t('.results_found_hint') %></p>
+
+  </div>
+</div>
+
+<div id="results-filters" class="govuk-grid-row govuk-!-padding-top-4">
+  
+  <div class="govuk-grid-column-one-third">
+
+    <div class="govuk-form-group results-panel">
+      <label class="govuk-label govuk-label--s" for="search">
+        <%= t('.keyword_search_label') %>
+      </label>
+      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input' %>
+    </div>
+
+    <h2 class="govuk-!-width-two-thirds govuk-heading-m" style="background-color: blue;">
+      <%= t('.apply_filters_label') %>
+    </h2>
+    <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'ccs-no-print' %>
+
+    <div class="govuk-form-group">
+      <label class="govuk-label govuk-label--s" for="search">
+        <%= t('.keyword_search_label') %>
+      </label>
+      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input' %>
+    </div>    
+
+  </div>
+
+  <div class="govuk-grid-column-two-thirds">
+    <h1 class="govuk-heading-xl">Two-thirds column</h1>
+    <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
+  </div>
+
+</div>
+
+
+
+<hr>
+xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+<hr>
+
+<div class="govuk-grid-row" style="border: 2px solid lime; ">
+  <div class="govuk-grid-column-full">
+    
 
     <%= form_tag apprenticeships_search_path, method: :get, class: 'supplier-record__calculator-form' do %>
       <div class="govuk-grid-row">
