--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -76,20 +76,21 @@ the import call to the parent GOVUK component) */
 #results-filters {
     .results-panel {
         background-color: govuk-colour("grey-4"); 
-        padding: govuk-spacing(5); //std govuk 
-        
-        & ~ a {
-            float: right; 
-            line-height: govuk-spacing(6); 
-        }       
+        padding: govuk-spacing(5); 
+      
     } 
 
-    
+    .govuk-form-group {
+        & > h2 {
+            float: left; 
+        }
 
-    .govuk-form-group > h2 {
-        float: left; 
-        padding-right: govuk-spacing(1);
-    }    
+        a.inline-link {
+            text-align: right; 
+            display: inline-block;  
+            line-height: govuk-spacing(6); 
+        }        
+    }
 }
 
 
