--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -24,12 +24,14 @@
       <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input' %>
     </div>
 
-    <h2 class="govuk-!-width-two-thirds govuk-heading-m" style="background-color: blue;">
-      <%= t('.apply_filters_label') %>
-    </h2>
-    <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'ccs-no-print' %>
-
     <div class="govuk-form-group">
+      <h2 class="govuk-!-width-two-thirds govuk-heading-m">
+        <%= t('.apply_filters_label') %>
+      </h2>
+      <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'inline-link govuk-!-width-one-third ccs-no-print', id: 'clear-filters' %>
+    </div>
+
+    <div class="govuk-form-group results-panel">
       <label class="govuk-label govuk-label--s" for="search">
         <%= t('.keyword_search_label') %>
       </label>
