"new text for start page"

--- a/app/views/apprenticeships/home/index.html.erb
+++ b/app/views/apprenticeships/home/index.html.erb
@@ -23,7 +23,10 @@
         <li><%= t('.know_the_apprenticeship_standards') %></li>
         <li><%= t('.know_how_you_would_like_the_training_to_be_delivered') %></li>
         <li><%= t('.know_weather_you_would_like_shared_training') %></li>
+        <li><%= t('.have_read_and_agreed') %></li>
       </ul>
+
+      <p class="govuk-body"><%= t('.this_service_will_help') %></p>
 
       <%= link_to t('.start_now'), apprenticeships_search_path, role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_apprenticeships') %>
 
