--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -73,26 +73,68 @@ the import call to the parent GOVUK component) */
 /* 4. Bespoke css overrides which THIS MODULE may require */
 
 
-#results-filters {
-    .results-panel {
+.results-filters {
+    $results-filters-labels-m: 17px; 
+
+    .results-filters__panel {
         background-color: govuk-colour("grey-4"); 
-        padding: govuk-spacing(5); 
-      
+        padding: govuk-spacing(2); //10px
+
+        &.results-filters--padding {
+            padding: govuk-spacing(5); //25px
+        } 
+
+        .govuk-fieldset legend {
+            background: yellow; 
+            padding: 0 govuk-spacing(2); 
+            width: 80%; 
+        }
+
+        .govuk-checkboxes {
+            background-color: govuk-colour("white"); 
+            padding: 10px; 
+            margin-top: govuk-spacing(1); 
+        }
+
+        .govuk-checkboxes__input + .govuk-checkboxes__label::before, 
+        .govuk-checkboxes__input {//the tick box border
+            height: 22px; 
+            width: 22px; 
+            top: 2px; 
+        } 
+
+        .govuk-checkboxes__input:checked + .govuk-checkboxes__label::after {//the tick
+            left: 4px; 
+            top: 7px; 
+            width: 11px; 
+            height: 5px; 
+            border-width: 0 0 3px 3px; 
+        } 
+
+        .govuk-checkboxes__label {
+            padding: 0; 
+            font-size: $results-filters-labels-m;
+        }
+
+        .govuk-checkboxes__item {
+            padding: 0 0 0 30px; 
+        }
     } 
 
-    .govuk-form-group {
+    .results-filters__heading-bloc {
         & > h2 {
             float: left; 
         }
 
-        a.inline-link {
+        & > a {
             text-align: right; 
             display: inline-block;  
             line-height: govuk-spacing(6); 
         }        
     }
 }
-
+//-webkit-transform: rotate(-45deg);
+//-ms-transform: rotate(-45deg);
 
 #main-content {
     min-height: 330px; 
