--- a/app/views/apprenticeships/home/_search_apprenticeship.html.erb
+++ b/app/views/apprenticeships/home/_search_apprenticeship.html.erb
@@ -1,8 +1,11 @@
-<div class="govuk-grid-row supplier-record__header-group">
-  <div class="govuk-grid-column-full">
-    <h2 class="govuk-heading-m govuk-!-font-size-27 govuk-link"><%= result[:name] %></h2>
-    <p><strong><%= t('apprenticeships.home.search_results.result_level_label') %></strong> <%= result[:level] %></p>
-    <p><strong><%= result[:providers] %> <%= t('apprenticeships.home.search_results.providers_label') %></strong></p>
+<div class="xgovuk-grid-row xsupplier-record__header-group">
+  <div class="xgovuk-grid-column-full">
+    <h3 class="xgovuk-heading-m xgovuk-!-font-size-27 xgovuk-link"><%= result[:name] %></h3>
+
+
+    <b><%= t('apprenticeships.home.search_results.result_level_label') %></b> <br>
+    <%= result[:level] %><br>
+    <b><%= result[:providers] %> <%= t('apprenticeships.home.search_results.providers_label') %></b>
   </div>
 </div>
-<hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+<!--hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"-->
