--- a/app/views/apprenticeships/home/search_results.html.erb
+++ b/app/views/apprenticeships/home/search_results.html.erb
@@ -2,7 +2,7 @@
 <%= content_for :page_section, t('apprenticeships.page_section') %>
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full" style="border: 1px solid red;">
+  <div class="govuk-grid-column-full">
 
     <h1 class="govuk-heading-xl"><%= t('.header') %></h1>
 
@@ -13,29 +13,55 @@
   </div>
 </div>
 
-<div id="results-filters" class="govuk-grid-row govuk-!-padding-top-4">
+<div id="results-filters" class="govuk-grid-row govuk-!-padding-top-4 results-filters">
   
   <div class="govuk-grid-column-one-third">
-
-    <div class="govuk-form-group results-panel">
+1
+    <div class="govuk-form-group results-filters__panel results-filters--padding">
       <label class="govuk-label govuk-label--s" for="search">
         <%= t('.keyword_search_label') %>
       </label>
       <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input' %>
     </div>
-
-    <div class="govuk-form-group">
+2
+    <div class="govuk-form-group results-filters__heading-bloc">
       <h2 class="govuk-!-width-two-thirds govuk-heading-m">
         <%= t('.apply_filters_label') %>
       </h2>
-      <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'inline-link govuk-!-width-one-third ccs-no-print', id: 'clear-filters' %>
+      <%= link_to t('.clear_filters_link'), apprenticeships_search_path, class: 'govuk-!-width-one-third ccs-no-print', id: 'clear-filters' %>
     </div>
+3
+    <div class="govuk-form-group results-filters__panel">
 
-    <div class="govuk-form-group results-panel">
-      <label class="govuk-label govuk-label--s" for="search">
-        <%= t('.keyword_search_label') %>
-      </label>
-      <%= text_field_tag :search, params[:keywordSearch], class: 'govuk-input' %>
+      <fieldset class="govuk-fieldset" aria-describedby="waste-hint">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+          <%= t('.levels_label') %>
+        </legend>
+
+        <a href="#"><span>Hide</span></a>
+
+        <div class="govuk-checkboxes">
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-1" name="waste" type="checkbox" value="carcasses">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-1">
+              Waste from animal carcasses
+            </label>
+          </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-2">
+              Waste from mines or quarries
+            </label>
+          </div>
+          <div class="govuk-checkboxes__item">
+            <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="farm">
+            <label class="govuk-label govuk-checkboxes__label" for="waste-3">
+              Farm or agricultural waste
+            </label>
+          </div>
+        </div>
+      </fieldset>
+
     </div>    
 
   </div>
@@ -53,7 +79,9 @@
 xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 <hr>
 
-<div class="govuk-grid-row" style="border: 2px solid lime; ">
+<br><br><br><br><br><br><br><br><br><br><br><br>
+
+<div class="govuk-grid-row" style="border: 2px solid lime; margin-top: 100px;">
   <div class="govuk-grid-column-full">
     
 
@@ -135,7 +163,7 @@ xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
             <h2 class="govuk-heading-m"><%= t('.sort_by_label') %></h2>
             <%= select_tag :sort, options_for_select(sort_option), class: 'govuk-select' %>
 
-            <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+            <!--hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible"-->
             <% results.each do |result| %>
               <%= render 'search_apprenticeship', result: result %>
             <% end %>
