--- a/app/views/layouts/_init-js.html.erb
+++ b/app/views/layouts/_init-js.html.erb
@@ -1,6 +1,8 @@
+<script src="/assets/apprenticeships.js"></script>
 <script>
-    window.GOVUKFrontend.initAll(); 
+    window.GOVUKFrontend.initAll();
+
     jQuery(document).ready(function(){ 
-        //initCustomFnc(); 
+        initCustomFnc(); 
     });
 </script>
