--- a/app/assets/apprenticeships/apprenticeships.scss
+++ b/app/assets/apprenticeships/apprenticeships.scss
@@ -72,23 +72,25 @@ the import call to the parent GOVUK component) */
 
 /* 4. Bespoke css overrides which THIS MODULE may require */
 
-
-.results-filters {
+.CCS-AT-results-filters {
     $results-filters-labels-m: 17px; 
 
-    .results-filters__panel {
+    .CCS-AT-results-filters__panel {
         background-color: govuk-colour("grey-4"); 
         padding: govuk-spacing(2); //10px
 
-        &.results-filters--padding {
+        &.CCS-AT-results-filters--padding {
             padding: govuk-spacing(5); //25px
         } 
 
-        .govuk-fieldset legend {
-            background: yellow; 
-            padding: 0 govuk-spacing(2); 
-            width: 80%; 
-        }
+        .govuk-fieldset {
+            position: relative;
+
+            legend {
+                padding: 0 govuk-spacing(2); 
+                margin-right: 30px; 
+            }
+        } 
 
         .govuk-checkboxes {
             background-color: govuk-colour("white"); 
@@ -118,10 +120,58 @@ the import call to the parent GOVUK component) */
 
         .govuk-checkboxes__item {
             padding: 0 0 0 30px; 
+        } 
+
+        .CCS-AT-show {
+            height: 26px;
+            width: 26px;
+            display: block;
+            position: absolute;
+            top: 0;
+            right: 0; 
+            cursor: pointer; 
+
+            span {//text-indent no good
+                position: absolute; 
+                left: -3000px; 
+                top: -3000px; 
+                display: block; 
+            }            
+
+            &::after {//the tick
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 5px;
+                width: 14px;
+                height: 14px;
+                border-width: 0; 
+                border-style: solid;
+                border-color: govuk-colour("black");            
+                background: transparent; 
+                -webkit-transform: rotate(-45deg); 
+                -moz-transform: rotate(-45deg);
+                -ms-transform: rotate(-45deg);
+                transform: rotate(-45deg);            
+            } 
+
         }
+
+        .CCS-AT-checkbox-accordian.show {
+            .CCS-AT-show::after {
+                top: 8px;
+                border-width: 3px 3px 0 0; 
+            } 
+
+            .CCS-AT-checkboxes-wrap {
+                display: block; 
+            }
+
+        }
+
     } 
 
-    .results-filters__heading-bloc {
+    .CCS-AT-results-filters__heading-bloc {
         & > h2 {
             float: left; 
         }
@@ -133,6 +183,17 @@ the import call to the parent GOVUK component) */
         }        
     }
 }
+
+        body.js-enabled .CCS-AT-results-filters .CCS-AT-checkbox-accordian {
+            .CCS-AT-checkboxes-wrap {
+                display: none; 
+            }
+            .CCS-AT-show::after {
+                border-width: 0 0 3px 3px; 
+            }
+        }
+
+
 //-webkit-transform: rotate(-45deg);
 //-ms-transform: rotate(-45deg);
 
