--- a/app/views/apprenticeships/home/requirements.html.erb
+++ b/app/views/apprenticeships/home/requirements.html.erb
@@ -4,37 +4,28 @@
     <div class="govuk-grid-column-two-thirds">
 
       <h2 class="govuk-heading-l"><%= t('Add your requirements:') %></h2>
-
-      <p class="govuk-heading-s"><%= t('What funding band does this fall into ?:') %></p>
  <div class="govuk-radios">
-      <div class="govuk-radios__item">
+<div class="govuk-radios govuk-radios--inline">
+
+      <p class="govuk-heading-s"><%= 'The maximum funding for this Apprenticehip standard is #27000. Would you use a supplier that requires additional funding to provide the training ? ' %></p>
+  <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="changed-name-1" name="changed-name" type="radio" value="yes">
         <label class="govuk-label govuk-radios__label" for="changed-name-1">
-		Below Funding Band Maximum          
-        </label>
-      </div>
-      
-      <div class="govuk-radios__item">
-        <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
-        <label class="govuk-label govuk-radios__label" for="changed-name-2">
-		At Funding Band Maximum          
+          Yes
         </label>
       </div>
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="changed-name-2" name="changed-name" type="radio" value="no">
         <label class="govuk-label govuk-radios__label" for="changed-name-2">
-		Above Funding Band Maximum          
+          No
         </label>
       </div>
-</div>
+    </div>
 
 <br/>
 <br/>
 
       <p class="govuk-heading-s"><%= t('Do you need help with recruiting the apprentices ?:') %></p>
-  <label class="govuk-hint" for="width-6">
-      For example, does the course require a custom structure or security specification      
-  </label>
 
  <div class="govuk-radios">
 <div class="govuk-radios govuk-radios--inline">
@@ -55,6 +46,9 @@
 <br/>
 <br/>
       <p class="govuk-heading-s"><%= t('Do you need to customise this training to your organisation needs ?:') %></p>
+  <label class="govuk-hint" for="width-6">
+      For example, does the course require a custom structure or security specification      
+  </label>
  <div class="govuk-radios">
 <div class="govuk-radios govuk-radios--inline">
       <div class="govuk-radios__item">
@@ -104,7 +98,9 @@
         </label>
       </div>
 </div>
-      <%= link_to t('.start_now'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_supply_teachers') %>
+<br/>
+<br/>
+      <%= link_to t('Find training providers'), journey_start_path(journey: SupplyTeachers::Journey.journey_name), role: 'button', class: 'govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8', 'aria-label': t('.start_finding_supply_teachers') %>
 
     </div>
   </div>
