HTML for landing page

--- a/app/views/home/landing_page.html.erb
+++ b/app/views/home/landing_page.html.erb
@@ -1,92 +1,95 @@
-<div class="govuk-grid-row govuk-!-margin-bottom-6">
-  <div class="govuk-grid-column-two-thirds">
+    <div class="CCS-landing-pg-content">
 
-    <h1 class="govuk-heading-xl">Crown Marketplace</h1>
+      <div class="govuk-grid-row govuk-!-margin-top-2 govuk-!-margin-bottom-6">
+        <div class="govuk-grid-column-two-thirds">
 
-    <p class="govuk-!-font-size-27">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id congue ligula.</p>
+          <h1 class="govuk-heading-xl">Crown Marketplace</h1>
 
-  </div>
-</div>
+          <p class="govuk-!-font-size-27">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id congue ligula.</p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Find supply teachers and agency workers</a></h2>
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6 govuk-!-padding-left-6">Allows users across the public education secytor to select agencies and other organisations to provide supply teachers</p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/supply-teachers" class="govuk-link--no-visited-state">Find supply teachers and agency workers</a></h2>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <p class="govuk-body govuk-!-padding-left-6">Allows users across the public education secytor to select agencies and other organisations to provide supply teachers</p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Find management consultancy services</a></h2>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6">Allow the public sector to buy single assignments for business consultancy services</p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/management_consultancy" class="govuk-link--no-visited-state">Find management consultancy services</a></h2>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <p class="govuk-body govuk-!-padding-left-6">Allow the public sector to buy single assignments for business consultancy services</p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Find facilities management services suppliers</a></h2>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6">A guided experience to direct the user to the most appropriate and competitive suppliers. Allows contract award up to &pound;1.5<abbr>m</abbr></p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/facilities_management" class="govuk-link--no-visited-state">Find facilities management services suppliers</a></h2>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <p class="govuk-body govuk-!-padding-left-6">A guided experience to direct the user to the most appropriate and competitive suppliers. Allows contract award up to &pound;1.5<abbr>m</abbr></p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Find apprenticeship training services</a></h2>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6">Allow public sector apprentice managers to find an approved supplier to provide training and to allow suppliers too big to provide courses</p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/apprenticeships" class="govuk-link--no-visited-state">Find apprenticeship training services</a></h2>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <p class="govuk-body govuk-!-padding-left-6">Allow public sector apprentice managers to find an approved supplier to provide training and to allow suppliers too big to provide courses</p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Find legal services</a></h2>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6">Provision of national and regional legal services and specialisms in property, construction, trainsport, rail and low cost drafting services</p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/legal_services" class="govuk-link--no-visited-state">Find legal services</a></h2>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <p class="govuk-body govuk-!-padding-left-6">Provision of national and regional legal services and specialisms in property, construction, trainsport, rail and low cost drafting services</p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Book travel</a></h2>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6">A service to allow users to book travel from multiple travel providers. Provide customers with travel data</p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/book_travel" class="govuk-link--no-visited-state">Book travel</a></h2>
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <p class="govuk-body govuk-!-padding-left-6">A service to allow users to book travel from multiple travel providers. Provide customers with travel data</p>
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">Gov Switch</a></h2>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
-    <p class="govuk-body govuk-!-padding-left-6">Allow users to switch electricity and gas suppliers. Water and fuels to be added later</p>
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/gov_switch" class="govuk-link--no-visited-state">Gov Switch</a></h2>
 
-
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
-
-<div class="govuk-grid-row  govuk-!-margin-bottom-9">
-  <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-m"><a href="">School Switch</a></h2>
-
-    <p class="govuk-body govuk-!-padding-left-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor maximus aliquam. Sed fringilla nibh orci, eu consectetur leo cursus at</p>
+          <p class="govuk-body govuk-!-padding-left-6">Allow users to switch electricity and gas suppliers. Water and fuels to be added later</p>
 
 
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-  </div>
-</div>
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
 
+      <div class="govuk-grid-row  govuk-!-margin-bottom-9">
+        <div class="govuk-grid-column-two-thirds">
+          <h2 class="govuk-heading-m"><a href="/school_switch" class="govuk-link--no-visited-state">School Switch</a></h2>
+
+          <p class="govuk-body govuk-!-padding-left-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor maximus aliquam. Sed fringilla nibh orci, eu consectetur leo cursus at</p>
+
+
+          <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+        </div>
+      </div>
+
+    </div>
