--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -54,7 +54,7 @@
         </div>
         <div class="govuk-header__content">
           <% if is_landing_page %>
-            <div>TEST</div>
+              <p class="govuk-heading-m govuk-!-margin-top-2" style="color: #fff; width: 100%; text-align: right;">Crown Marketplace</p>
           <% else %>
             <%= link_to_service_start_page %>
             <nav>
